ChatScreen mostly finished

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,38 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="298.5"
+    android:viewportHeight="265.5">
+  <group android:scaleX="0.55"
+      android:scaleY="0.48919597"
+      android:translateX="67.1625"
+      android:translateY="67.809235">
+    <group>
+      <clip-path
+          android:pathData="M16.84,0.34L281.09,0.34L281.09,264.59L16.84,264.59ZM16.84,0.34"/>
+      <group>
+        <clip-path
+            android:pathData="M149,0.34C76.01,0.34 16.84,59.51 16.84,132.5C16.84,205.48 76.01,264.65 149,264.65C221.98,264.65 281.15,205.48 281.15,132.5C281.15,59.51 221.98,0.34 149,0.34ZM149,0.34"/>
+        <path
+            android:pathData="M149,0.34C76.01,0.34 16.84,59.51 16.84,132.5C16.84,205.48 76.01,264.65 149,264.65C221.98,264.65 281.15,205.48 281.15,132.5C281.15,59.51 221.98,0.34 149,0.34ZM149,0.34"
+            android:strokeLineJoin="miter"
+            android:strokeWidth="5.99"
+            android:fillColor="#00000000"
+            android:strokeColor="#3ddb85"
+            android:strokeLineCap="butt"/>
+      </group>
+    </group>
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M48.34,144.11L65.65,144.11C79.62,144.11 86.4,136.27 86.4,126.8C86.4,117.57 79.37,108.26 65.57,108.26L47.03,108.26C46.3,108.26 45.65,108.83 45.65,109.64L45.65,158.89C45.65,159.71 46.3,160.2 46.95,160.2C47.68,160.2 48.34,159.71 48.34,158.81ZM48.34,141.58L48.34,110.79L65.65,110.79C76.84,110.79 83.54,118.79 83.62,126.8C83.78,134.14 78.4,141.58 65.65,141.58ZM48.34,141.58"
+        android:fillColor="#3ddb85"/>
+    <path
+        android:pathData="M118.74,106.78C118.25,106.78 117.76,107.03 117.51,107.52L91.54,158.73C90.97,159.87 91.86,160.77 92.76,160.77C93.26,160.77 93.66,160.53 93.91,160.03L101.18,145.58L136.29,145.58L143.56,160.03C143.81,160.53 144.22,160.77 144.71,160.77C145.61,160.77 146.51,159.87 145.93,158.73L119.88,107.52C119.63,107.03 119.22,106.78 118.74,106.78ZM118.74,110.79L134.99,143.13L102.4,143.13ZM118.74,110.79"
+        android:fillColor="#3ddb85"/>
+    <path
+        android:pathData="M156.38,160.2L191.99,160.2C193.79,160.2 193.87,157.67 191.99,157.67L157.69,157.67L157.69,109.81C157.69,108.75 157.04,108.26 156.3,108.26C155.65,108.26 154.91,108.75 154.91,109.81L154.91,158.65C154.91,159.63 155.32,160.2 156.38,160.2ZM156.38,160.2"
+        android:fillColor="#3ddb85"/>
+    <path
+        android:pathData="M249.73,109.07L227.19,144.44L204.49,109.07C204.16,108.5 203.67,108.26 203.18,108.26C202.53,108.26 201.87,108.75 201.87,109.73L201.87,158.73C201.87,159.71 202.61,160.2 203.26,160.2C203.99,160.2 204.65,159.71 204.65,158.73L204.65,114.3L225.72,147.21C226.37,148.44 227.92,148.44 228.58,147.21L249.65,114.14L249.65,158.73C249.65,159.71 250.3,160.2 251.04,160.2C251.69,160.2 252.42,159.71 252.42,158.73L252.42,109.73C252.42,108.75 251.77,108.26 251.12,108.26C250.63,108.26 250.14,108.5 249.73,109.07ZM249.73,109.07"
+        android:fillColor="#3ddb85"/>
+  </group>
 </vector>
