End of PALM0 development

--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,38 +1,43 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="298.5"
-    android:viewportHeight="265.5">
+    android:viewportWidth="375"
+    android:viewportHeight="375">
   <group android:scaleX="0.55"
-      android:scaleY="0.48919597"
-      android:translateX="67.1625"
-      android:translateY="67.809235">
+      android:scaleY="0.55"
+      android:translateX="84.375"
+      android:translateY="84.375">
     <group>
       <clip-path
-          android:pathData="M16.84,0.34L281.09,0.34L281.09,264.59L16.84,264.59ZM16.84,0.34"/>
+          android:pathData="M163,126L327,126L327,290L163,290ZM163,126"/>
       <group>
         <clip-path
-            android:pathData="M149,0.34C76.01,0.34 16.84,59.51 16.84,132.5C16.84,205.48 76.01,264.65 149,264.65C221.98,264.65 281.15,205.48 281.15,132.5C281.15,59.51 221.98,0.34 149,0.34ZM149,0.34"/>
-        <path
-            android:pathData="M149,0.34C76.01,0.34 16.84,59.51 16.84,132.5C16.84,205.48 76.01,264.65 149,264.65C221.98,264.65 281.15,205.48 281.15,132.5C281.15,59.51 221.98,0.34 149,0.34ZM149,0.34"
-            android:strokeLineJoin="miter"
-            android:strokeWidth="5.99"
-            android:fillColor="#00000000"
-            android:strokeColor="#3ddb85"
-            android:strokeLineCap="butt"/>
+            android:pathData="M123.29,223.11L260.7,85.83L326.7,151.89L189.29,289.17ZM123.29,223.11"/>
+        <group>
+          <clip-path
+              android:pathData="M173.08,181.29C177.71,171.88 184.18,162.28 192.04,154.43C199.89,146.58 208.8,140.37 218.17,135.8C218.39,135.73 218.54,135.58 218.77,135.5C254.52,118.94 299.08,124.98 326.7,151.89L189.29,289.17C162.25,261.37 155.96,217.1 173.08,181.29ZM173.08,181.29"/>
+          <path
+              android:pathData="M123.29,223.11L260.7,85.83L326.7,151.89L189.29,289.17ZM123.29,223.11"
+              android:fillColor="#3ddb85"
+              android:fillType="nonZero"/>
+        </group>
       </group>
     </group>
-    <path
-        android:pathData="M48.34,144.11L65.65,144.11C79.62,144.11 86.4,136.27 86.4,126.8C86.4,117.57 79.37,108.26 65.57,108.26L47.03,108.26C46.3,108.26 45.65,108.83 45.65,109.64L45.65,158.89C45.65,159.71 46.3,160.2 46.95,160.2C47.68,160.2 48.34,159.71 48.34,158.81ZM48.34,141.58L48.34,110.79L65.65,110.79C76.84,110.79 83.54,118.79 83.62,126.8C83.78,134.14 78.4,141.58 65.65,141.58ZM48.34,141.58"
-        android:fillColor="#3ddb85"/>
-    <path
-        android:pathData="M118.74,106.78C118.25,106.78 117.76,107.03 117.51,107.52L91.54,158.73C90.97,159.87 91.86,160.77 92.76,160.77C93.26,160.77 93.66,160.53 93.91,160.03L101.18,145.58L136.29,145.58L143.56,160.03C143.81,160.53 144.22,160.77 144.71,160.77C145.61,160.77 146.51,159.87 145.93,158.73L119.88,107.52C119.63,107.03 119.22,106.78 118.74,106.78ZM118.74,110.79L134.99,143.13L102.4,143.13ZM118.74,110.79"
-        android:fillColor="#3ddb85"/>
-    <path
-        android:pathData="M156.38,160.2L191.99,160.2C193.79,160.2 193.87,157.67 191.99,157.67L157.69,157.67L157.69,109.81C157.69,108.75 157.04,108.26 156.3,108.26C155.65,108.26 154.91,108.75 154.91,109.81L154.91,158.65C154.91,159.63 155.32,160.2 156.38,160.2ZM156.38,160.2"
-        android:fillColor="#3ddb85"/>
-    <path
-        android:pathData="M249.73,109.07L227.19,144.44L204.49,109.07C204.16,108.5 203.67,108.26 203.18,108.26C202.53,108.26 201.87,108.75 201.87,109.73L201.87,158.73C201.87,159.71 202.61,160.2 203.26,160.2C203.99,160.2 204.65,159.71 204.65,158.73L204.65,114.3L225.72,147.21C226.37,148.44 227.92,148.44 228.58,147.21L249.65,114.14L249.65,158.73C249.65,159.71 250.3,160.2 251.04,160.2C251.69,160.2 252.42,159.71 252.42,158.73L252.42,109.73C252.42,108.75 251.77,108.26 251.12,108.26C250.63,108.26 250.14,108.5 249.73,109.07ZM249.73,109.07"
-        android:fillColor="#3ddb85"/>
+    <group>
+      <clip-path
+          android:pathData="M48,128L214,128L214,290L48,290ZM48,128"/>
+      <group>
+        <clip-path
+            android:pathData="M112.48,87.83L253.56,221.34L189.37,289.16L48.3,155.65ZM112.48,87.83"/>
+        <group>
+          <clip-path
+              android:pathData="M155.68,136.43C165.22,140.79 174.99,146.98 183.06,154.62C191.13,162.26 197.59,170.99 202.41,180.22C202.5,180.44 202.65,180.59 202.73,180.81C220.29,216.08 215.5,260.79 189.37,289.16L48.3,155.65C75.33,127.85 119.41,120.31 155.68,136.43ZM155.68,136.43"/>
+          <path
+              android:pathData="M112.48,87.83L253.56,221.34L189.37,289.16L48.3,155.65ZM112.48,87.83"
+              android:fillColor="#3d16a8"
+              android:fillType="nonZero"/>
+        </group>
+      </group>
+    </group>
   </group>
 </vector>
